# cpp-vs-schoenberg

./: .gitignore  README.md  output.musicxml
schoenberg/: CMakeLists.txt  ScoreXML.cpp  ScoreXML.h  chromatic-scale.h  example.musicxml  main.cpp  measure.h  melody.cpp  melody.h  melody_utils.cpp  score.h  score_utils.cpp  time_signature.h  tone-row.cpp  tone-row.h  tone_row_utils.cpp  utils.cpp  utils.h
schoenberg/include/: CMakeLists.txt  melody.h  melody_utils.h  score.h  score_utils.h  tables.h  time_signature.h  tone_row.h  tone_row_utils.h  utils.h
schoenberg/include/utils/: score_utils.h  utils.h
schoenberg/source/: CMakeLists.txt  melody_utils.cpp  score_utils.cpp  tone_row_utils.cpp  utils.cpp
schoenberg/src/: tone_row.cpp  utils.cpp
